# riscv_qemu_test

./: README.md
test_gcc/: build.sh  cross.txt  meson.build
test_gcc/test/: meson.build  test1.c
test_nuclei_qemu/: cross.txt
test_nuclei_qemu/driver/: drv_test.c  drv_uart.h
test_nuclei_qemu/src/: start.S
test_nuclei_qemu_32/: cross.txt  link.ld  link_64.ld  meson.build  readme.txt  run.sh
test_nuclei_qemu_32/application/: dsp.c  dsp.h  encoding.h  main.c  meson.build
test_nuclei_qemu_32/driver/: drv_test.c  drv_test.h  drv_uart.c  drv_uart.h
test_nuclei_qemu_32/src/: meson.build  ttypes.h
test_nuclei_qemu_64/: link.ld  meson.build  run.sh
test_nuclei_qemu_64/application/: meson.build
test_qemu/: cross.txt  link.ld  meson.build  run.sh
test_qemu/application/: main.c  meson.build
test_qemu/configs/: qemu_virt.lds  qemu_virt_config.h  test_config.h
test_qemu/driver/: drv_uart.c  drv_uart.h  meson.build
test_qemu/src/: ttypes.h
